@@ -1,3 +1,7 @@
+2008-07-10  Doug Evans  <dje@google.com>
+
+	* doc/gdb.texinfo: Document "set print symbol-loading on|off".
+
 2008-07-10  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gdb.texinfo (Starting): Document "set disable-randomization".
